# commoncode

./: pyproject.toml  requirements.txt  setup.cfg
etc/scripts/: check_thirdparty.py  fetch_thirdparty.py  gen_pypi_simple.py  gen_pypi_simple.py.NOTICE  gen_requirements.py  gen_requirements_dev.py  test_utils_pip_compatibility_tags.py  test_utils_pypi_supported_tags.py  utils_dejacode.py  utils_pip_compatibility_tags.py  utils_pip_compatibility_tags.py.ABOUT  utils_pypi_supported_tags.py  utils_requirements.py  utils_thirdparty.py  utils_thirdparty.py.ABOUT
src/commoncode/: __init__.py  archive.py  cliutils.py  codec.py  command.py  compat.py  datautils.py  date.py  dict_utils.py  fetch.py  fileset.py  filetype.py  fileutils.py  functional.py  hash.py  ignore.py  paths.py  python.LICENSE  resource.py  system.py  testcase.py  text.py  timeutils.py  urn.py  version.py
tests/: test_cliutils.py  test_cliutils_progressbar.py  test_codec.py  test_command.py  test_date.py  test_fileset.py  test_filetype.py  test_fileutils.py  test_functional.py  test_hash.py  test_ignore.py  test_paths.py  test_resource.py  test_saneyaml.py  test_skeleton_codestyle.py  test_text.py  test_timeutils.py  test_urn.py  test_version.py
tests/data/fileset/: scancodeignore.lst
tests/data/resource/codebase/: et131x.h
tests/data/resource/samples/: README
tests/data/resource/samples/JGroups/: EULA
tests/data/resource/samples/JGroups/licenses/: bouncycastle.txt  cpl-1.0.txt
tests/data/resource/samples/JGroups/src/: FixedMembershipToken.java  ImmutableReference.java  RATE_LIMITER.java  RouterStub.java  RouterStubManager.java  S3_PING.java
tests/data/resource/virtual_codebase/: combine-expected.json  combine-shared-directory-name-1.json  combine-shared-directory-name-2.json  combine-shared-directory-name-expected.json  docker-hello-world.json  et131x.h.json  fingerprint_attribute.json  full-root-info-many-expected.json  full-root-info-one-expected.json  license-scan.json  node-16-slim.json  stripped-and-skipped-root.json  virtual_codebase.json  zephyr-binary.json
tests/data/resource/with_path/: virtual-codebase-expected.json  virtual-codebase.json
tests/data/saneyaml/: metadata1  metadata1.notag
